# crawler

./: .gitignore  README.md  pyproject.toml
github_crawler/: cli.py  main.py
github_crawler/core/: logger_settings.py  search_type.py  settings.py
github_crawler/crawler/: fetcher.py  parser.py  storage.py
github_crawler/inputs/: input.json
tests/: conftest.py  test_cli.py  test_fetcher.py  test_main.py  test_parser.py  test_storage.py
